@@ -807,18 +807,6 @@ name|info
 operator|.
 name|add
 argument_list|(
-literal|"ulimit"
-argument_list|,
-name|execute
-argument_list|(
-literal|"ulimit -n"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|info
-operator|.
-name|add
-argument_list|(
 literal|"uptime"
 argument_list|,
 name|execute
@@ -834,8 +822,13 @@ parameter_list|(
 name|Throwable
 name|ex
 parameter_list|)
-block|{}
-comment|// ignore
+block|{
+name|ex
+operator|.
+name|printStackTrace
+argument_list|()
+expr_stmt|;
+block|}
 return|return
 name|info
 return|;
@@ -964,16 +957,15 @@ name|in
 init|=
 literal|null
 decl_stmt|;
-name|BufferedReader
-name|reader
+name|Process
+name|process
 init|=
 literal|null
 decl_stmt|;
 try|try
 block|{
-name|Process
 name|process
-init|=
+operator|=
 name|Runtime
 operator|.
 name|getRuntime
@@ -983,7 +975,7 @@ name|exec
 argument_list|(
 name|cmd
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|in
 operator|=
 operator|new
@@ -1022,20 +1014,44 @@ return|;
 block|}
 finally|finally
 block|{
+if|if
+condition|(
+name|process
+operator|!=
+literal|null
+condition|)
+block|{
 name|IOUtils
 operator|.
 name|closeQuietly
 argument_list|(
-name|reader
+name|process
+operator|.
+name|getOutputStream
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|IOUtils
 operator|.
 name|closeQuietly
 argument_list|(
-name|in
+name|process
+operator|.
+name|getInputStream
+argument_list|()
 argument_list|)
 expr_stmt|;
+name|IOUtils
+operator|.
+name|closeQuietly
+argument_list|(
+name|process
+operator|.
+name|getErrorStream
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 comment|/**    * Get JVM Info - including memory info    */
